# pythonz

./: .coveragerc  .env.dev  .gitignore  AUTHORS.md  AUTHORS.rst  Dockerfile  README.md  README.rst  __init__.py  bootstrap.sh  bootstrap_docker.sh  docker-compose.yml  manage.py  manage_dev.py  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  ruff.toml  runtests.sh  setup.py  urls.py  wscaff.yml  wsgi.py
.github/workflows/: python-package.yml
apps/: __init__.py  admin.py  commands.py  config.py  exceptions.py  forms.py  logger.py  metrics.py  middleware.py  models.py  partners.py  realms.py  resources.py  shortcuts.py  signals.py  sitemessages.py  tasks.py  telegram.py  tests.py  utils.py  views.py  views_custom.py  widgets.py  zen.py
apps/forms/: forms.py  widgets.py
apps/generics/: forms.py  models.py  realms.py  views.py
apps/integration/: partners.py  peps.py  resources.py  telegram.py  utils.py  vacancies.py  videos.py
apps/migrations/: 0001_initial.py  0002_user_timezone.py  0003_auto_20140926_0529.py  0004_auto_20140926_0808.py  0005_place_description.py  0007_auto_20141004_1034.py  0008_community.py  0009_auto_20141004_1314.py  0010_auto_20141004_1519.py  0011_auto_20141013_1517.py  0012_auto_20141018_1416.py  0014_auto_20141023_1450.py  0015_auto_20141023_1500.py  0016_auto_20141023_1529.py  0018_auto_20141108_1538.py  0019_auto_20141114_1603.py  0020_historicalarticle_historicalbook_historicalcommunity_historicaldiscussion_historicalevent_historical.py  0021_partnerlink.py  0022_auto_20150325_1515.py  0023_auto_20150331_1711.py  0025_auto_20150625_1720.py  0026_auto_20150917_1619.py  0027_auto_20151104_0511.py  0028_user_profile_public.py  0029_auto_20160321_1412.py  0030_auto_20160711_0915.py  0032_auto_20160908_1754.py  0033_user_twitter.py  0034_auto_20160913_1028.py  0035_auto_20160921_0745.py  0040_auto_20161231_0641.py  0042_summary.py  0043_auto_20180603_1236.py
apps/templates/: _base.html  base_details.html  base_edit.html  base_list_items.html  base_listing.html  index.html  sub_author_editor.html  sub_box_ad_rightbar.html  sub_box_ads.html  sub_box_bookmark.html  sub_box_controls.html  sub_box_rating.html  sub_box_tags.html  (+25 more)
conf/: pythonz-certbot-hook.sh  pythonz.service
nginx_pages/: error.html  maintenance.html
pythonz/: __init__.py  manage.py  urls.py  uwsgicfg.py  wsgi.py
settings/: base.py  dev.py  settings.py  settings_base.py  settings_development.py  settings_testing.py  test.py
tests/: conftest.py  requirements.txt  test_models.py  test_utils.py
(+413 files in other folders)
